Add manual triggering to 'Publish Docker image' Github Action.

--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -3,7 +3,7 @@ name: Publish Docker image
 env:
   DOCKERHUB_IMAGE: pataquets/neomutt
 
-on: push
+on: [ push, workflow_dispatch ]
 
 jobs:
   buildx:
